message ApiDemoReq
{
    optional string str = 2;
}

message ApiDemoResp
{
    optional string str = 2;
}